MediaPlayer reports error with HTTP Live Streams instead of EOS

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 8u102, 9, 10
    • Component/s: javafx
    • linux

        This issue is reproducible on Ubuntu 15.10 or 16.04 (with libav56). It is reproducible with any streams which I tried, so it looks like affecting any HLS stream with MPEG-TS. MP3 HLS streams work fine.

        To reproduce try to play any HLS stream with callbacks set for error and EOS. EOS is never received and error will be set instead.

              Assignee:
              Alexander Matveev
              Reporter:
              Alexander Matveev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: