8185691: MediaPlayer reports error with HTTP Live Streams instead of EOS

Reviewed-by: kcr, ddehaven